<resources>
    <string name="bsft_dialog_button_open">Open</string>
    <string name="bsft_dialog_button_dismiss">Dismiss</string>
    <string name="bsft_notification_large_icon">Large Icon</string>
    <string name="bsft_notification_small_icon">Small Icon</string>
    <string name="bsft_notification_carousel_prev_button">Carousel prev button</string>
    <string name="bsft_notification_carousel_next_button">Carousel next button</string>
    <string name="bsft_notification_big_picture">Big picture</string>
    <string name="bsft_notification_carousel_image">Carousel image</string>
    <string name="bsft_notification_dot">&#8226;</string>
    <string name="bsft_in_app_rating_submit">Submit</string>
    <string name="bsft_push_permission_popup_message">You have denied the notification permission request twice. Please go to settings to enable it.</string>
    <string name="bsft_push_permission_popup_title">Notification Permission</string>
    <string name="bsft_push_permission_popup_ignore">Ignore</string>
    <string name="bsft_push_permission_popup_settings">Settings</string>
    <string name="bsft_inbox_placeholder_title">Blueshift 💙</string>
    <string name="bsft_inbox_placeholder_details">Blueshift inbox message is here.</string>
    <string name="bsft_inbox_placeholder_date">20 May 2022</string>
    <string name="bsft_inbox_unread_indicator">Inbox unread indicator</string>
    <string name="bsft_inbox_icon">Inbox icon</string>
    <string name="bsft_inbox_title">Inbox</string>
    <string name="bsft_inbox_refresh">Refresh</string>
    <string name="bsft_inbox_delete_failure_message">Delete failed. Please check your internet connection.</string>
</resources>
