<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/bsft_inbox_unread_indicator"
        android:layout_width="8dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/bsft_inbox_unread_indicator"
        android:src="@drawable/bsft_inbox_unread_indicator" />

    <ImageView
        android:id="@+id/bsft_inbox_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bsft_inbox_icon_background"
        android:contentDescription="@string/bsft_inbox_icon"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/bsft_inbox_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/bsft_inbox_unread_indicator"
        android:layout_toEndOf="@id/bsft_inbox_icon"
        android:fontFamily="@font/domine"
        android:text="@string/bsft_inbox_placeholder_title"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bsft_inbox_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bsft_inbox_title"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/bsft_inbox_unread_indicator"
        android:layout_toEndOf="@id/bsft_inbox_icon"
        android:fontFamily="@font/satisfy_regular"
        android:text="@string/bsft_inbox_placeholder_details"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/bsft_inbox_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bsft_inbox_details"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/bsft_inbox_unread_indicator"
        android:layout_toEndOf="@id/bsft_inbox_icon"
        android:fontFamily="@font/kalam_regular"
        android:text="@string/bsft_inbox_placeholder_date"
        android:textSize="11sp" />

</RelativeLayout>